# proggetto9

./: CMakeLists.txt  README.md  comptebancaire.cpp  comptebancaire.h  destinatario.cpp  destinatorio.h  main.cpp  tests.cpp  tests_main.cpp  transaction.cpp  transaction.h
